--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <button mat-button (click)="addPoll()" title="Create new poll">
     <mat-icon>add</mat-icon>
   </button>
-  <span class="application-name">Poll-A-Lot</span>
+  <span class="application-name" click="goToRoot()">Poll-A-Lot</span>
 
   <ng-container *ngIf="user$ | async as user; else showLogin">
     <button mat-button (click)="logout()"><mat-icon>exit_to_app</mat-icon></button>
