--- a/src/app/share-dialog/share-dialog.component.html
+++ b/src/app/share-dialog/share-dialog.component.html
@@ -9,5 +9,5 @@
   </p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="true">Ok</button>
+  <button mat-button color="primary" [mat-dialog-close]="true">Ok</button>
 </div>
