--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -29,12 +29,11 @@
         box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
 
         position: absolute;
-        right: 9px;
+        right: 10px;
         top: 50%;
         -webkit-transform: translate(0, -50%);
         transform: translate(0, -50%);
-        color: white;
-        text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.6);
+        color: black;
         border-radius: 50%;
     }
 }
