--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,11 +7,11 @@
 
   <mat-menu #appMenu="matMenu">
     <ng-container *ngIf="user$ | async as user; else showLogin">
-        <button mat-menu-item (click)="manage()">Manage polls</button>
-        <button mat-menu-item (click)="logout()">Logout</button>
+        <button mat-menu-item (click)="manage()" aria-label="Manage polls">Manage polls</button>
+        <button mat-menu-item (click)="logout()" aria-label="Logout">Logout</button>
       </ng-container>
   </mat-menu>
-  <button mat-icon-button [matMenuTriggerFor]="appMenu">
+  <button mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="Menu">
     <mat-icon>menu</mat-icon>
   </button>
   
@@ -19,5 +19,5 @@
 
 
 <ng-template #showLogin>
-  <button mat-menu-item (click)="login()">Login</button>
+  <button mat-menu-item (click)="login()" aria-label="Login">Login</button>
 </ng-template>
