--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,5 +3,5 @@
     Easily create polls and share them with you friends!<br/><br/>
     Yay! <img alt=":)" class="clapping-emoji" src="assets/img/clapping_hands_emoji.png">
   </p>
-  <button mat-raised-button  color="primary" (click)="createPoll()">Create poll</button>
+  <button mat-raised-button  color="primary" (click)="createPoll()" aria-label="Create poll">Create poll</button>
 </div>
