--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,14 @@
     src: url("assets/fonts/Product-Sans-Bold.ttf");
 }
 
-// html {
-//   height: 100%;
-// }
+html {
+  height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: #b3ffab;
+  background-image: linear-gradient(-225deg,#dfffcd 0,#90f9c4 48%,#39f3bb 100%);
+  background-size: cover;
+}
 
 body {
   height: 100%;
@@ -23,8 +28,8 @@ body {
 
 body {
     font-family: 'Product Sans';
-    background-color: #b3ffab;
-    background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%);
+    // background-color: #b3ffab;
+    // background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%);
 }
 
 h1, h2, h3, h4, label {
@@ -59,6 +64,11 @@ h1, h2, h3, h4, label {
     font-size: 20px;
 }
 
+.login-card {
+  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 
 .loader {
   display: flex;
