--- a/src/app/share-dialog/share-dialog.component.scss
+++ b/src/app/share-dialog/share-dialog.component.scss
@@ -1,6 +1,10 @@
 :host {
     text-align: center;
 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
     .mat-dialog-actions {
         justify-content: center;
     }
