--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -1,4 +1,5 @@
 <mat-card *ngIf="user$ | async as user; else showLogin">
+  <ng-container *ngIf="loading$ | async as loading">Loading: {{ loading }}<spinner></spinner></ng-container>
   <mat-form-field class="full-width">
     <input matInput placeholder="Name of the poll" [(ngModel)]="poll.name">
   </mat-form-field>
@@ -13,7 +14,6 @@
     <button mat-raised-button (click)="addPollItem()" aria-label="Add option">Add option</button>
     <button mat-raised-button color="primary" [disabled]="!saveActive()" class="save-btn" (click)="save()" aria-label="Save">Save</button>
   </div>
-
 </mat-card>
 
 <ng-template #showLogin>
