--- a/src/app/login-dialog/login-dialog.component.scss
+++ b/src/app/login-dialog/login-dialog.component.scss
@@ -1,5 +1,8 @@
 :host {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 
     .mat-dialog-actions {
         display: flex;
