--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-
 @font-face {
     font-family: "Product Sans";
     src: url("assets/fonts/Product-Sans-Regular.ttf");
@@ -12,7 +10,7 @@
 }
 
 html {
-  height: 100%;
+  // height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #b3ffab;
@@ -24,6 +22,7 @@ body {
   height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  padding-bottom: 10px;
 }
 
 body {
@@ -87,6 +86,19 @@ h1, h2, h3, h4, label {
 
   /* the opacity is used to lazyload the spinner, see animation delay */
   opacity: 0;
+}
+
+.spinner-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
 }
 
 @keyframes rotation {
