--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,22 @@
   <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span>
 
   <mat-menu #appMenu="matMenu">
+    <ng-container *ngIf="nightMode$ | async as nightMode">
+      <button mat-menu-item (click)="set(!nightMode.state)" aria-label="Change theme">
+        <mat-icon>wb_sunny</mat-icon>
+        <span>{{ !nightMode.state ? 'Set dark theme' : 'Set light theme'  }}</span>
+      </button>
+      <mat-divider></mat-divider>
+    </ng-container>
     <ng-container *ngIf="user$ | async as user; else showLogin">
-        <button mat-menu-item (click)="manage()" aria-label="Manage polls">Manage polls</button>
-        <button mat-menu-item (click)="logout()" aria-label="Logout">Logout</button>
+        <button mat-menu-item (click)="manage()" aria-label="Manage polls">
+          <mat-icon>favorite_border</mat-icon>
+          <span>My polls</span>
+        </button>
+        <button mat-menu-item (click)="logout()" aria-label="Logout">
+          <mat-icon>exit_to_app</mat-icon>
+          <span>Logout</span>
+        </button>
       </ng-container>
   </mat-menu>
   <button mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="Menu">
@@ -19,5 +32,8 @@
 
 
 <ng-template #showLogin>
-  <button mat-menu-item (click)="login()" aria-label="Login">Login</button>
+  <button mat-menu-item (click)="login()" aria-label="Login">
+    <mat-icon>perm_identity</mat-icon>
+    <span>Login</span>
+  </button>
 </ng-template>
