Add files not yet commited.

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -1,5 +1,5 @@
 <mat-card *ngIf="user$ | async as user; else showLogin">
-  <ng-container *ngIf="loading$ | async as loading">Loading: {{ loading }}<spinner></spinner></ng-container>
+  <ng-container *ngIf="loading$ | async as loading"><spinner></spinner></ng-container>
   <mat-form-field class="full-width">
     <input matInput placeholder="Name of the poll" [(ngModel)]="poll.name">
   </mat-form-field>
