--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,16 +9,30 @@
     src: url("assets/fonts/Product-Sans-Bold.ttf");
 }
 
+$light-bg-image: linear-gradient(-225deg,#dfffcd 0,#90f9c4 48%,#39f3bb 100%);
+$dark-bg-image: linear-gradient(to right, #434343 0%, black 100%);
+
 html {
   height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #b3ffab;
-  background-image: linear-gradient(-225deg,#dfffcd 0,#90f9c4 48%,#39f3bb 100%);
+  background-image: $light-bg-image;
   background-size: cover;
 
   &.dark-theme {
-    background-image: linear-gradient(to right, #434343 0%, black 100%);
+    background-image: $dark-bg-image;
+    background-color: black;
+
+    .spinner-bg {
+      background-image: $dark-bg-image;
+    }
+
+    .option-card {
+      & .bg {
+        background-color: #313131 !important;
+      }
+    }
   }
 }
 
@@ -82,8 +96,8 @@ h1, h2, h3, h4, label {
 .spinner {
   height: 5vh;
   width: 5vh;
-  border: 6px solid rgba(0, 174, 239, 0.2);
-  border-top-color: rgba(0, 174, 239, 0.8);
+  border: 6px solid rgba(255, 255, 255, 0.6);
+  border-top-color: rgba(255, 255, 255, 1.0);
   border-radius: 100%;
   animation: rotation 0.6s infinite linear 0.25s;
 
@@ -97,7 +111,8 @@ h1, h2, h3, h4, label {
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: $light-bg-image;
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
