--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <a href="https://www.linkedin.com/in/kuismajari/" title="Jari Kuisma @ LinkedIn">Jari Kuisma</a> 2018 <a href="https://github.com/acoustic-/pixr-image-app">Github</a>
+  <span (click)="window.open('https://www.linkedin.com/in/kuismajari/')" title="Jari Kuisma @ LinkedIn">Jari Kuisma</span> 2018 <span (click)="window.open('https://github.com/acoustic-/poll-a-lot')">Github</span>
 </div>
