--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <mat-card class="container">
   <p>
     Easily create polls and share them with you friends!<br/><br/>
-    Yay! <img alt=":)" class="clapping-emoji" src="assets/img/clapping_hands_emoji.png">
+    Yay! 👏
   </p>
   <button mat-raised-button  color="primary" (click)="createPoll()" aria-label="Create poll">Create poll</button>
 </mat-card>
