--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -1,3 +1,9 @@
+.poll-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .option-card{
     position: relative;
     transition: all 2s ease !important;
