--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,6 +93,13 @@ h1, h2, h3, h4, label {
   align-items: center;
 }
 
+.disclaimer {
+  text-align: center;
+  padding-top: 15px;
+  font-size: 0.8em;
+  opacity: 0.7;
+}
+
 .spinner {
   height: 5vh;
   width: 5vh;
