--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Login or use a nickname</h1>
-<p class="info">To manage you polls you need to login with Google. Not worries, you can still create, share and vote poll withouth signing in. With login it's just easier! 😉</p>
+<p class="info">To manage your polls you need to login with Google. No worries, you can still create, share and vote polls withouth signing in. With login it's just easier! 😉</p>
 <button mat-raised-button cdkFocusInitial (click)="login()" color="primary" aria-label="Login">Login with Google</button>
 <div mat-dialog-content>
   <p>Use nickname:</p>
