--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ $light-bg-image: linear-gradient(-225deg,#dfffcd 0,#90f9c4 48%,#39f3bb 100%);
 $dark-bg-image: linear-gradient(to right, #434343 0%, black 100%);
 
 html {
-  height: 100%;
+  //height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: #b3ffab;
@@ -37,16 +37,16 @@ html {
 }
 
 body {
+  font-family: 'Product Sans';
+
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding-bottom: 10px;
+
+  overscroll-behavior-y: none;
 }
 
-body {
-    font-family: 'Product Sans';
-    // background-color: #b3ffab;
-    // background-image: linear-gradient(-225deg, #DFFFCD 0%, #90F9C4 48%, #39F3BB 100%);
-}
+html, body { min-height: 100%; }
 
 h1, h2, h3, h4, label {
     font-family: 'Product Sans Bold';
