--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -23,9 +23,9 @@
         </div>
       </ng-container>
     </mat-card>
-    <div class="disclaimer">
+    <p class="disclaimer">
       This content is neither created nor endorsed by the service provider.
-    </div>
+    </p>
   </ng-container>
 </ng-container>
 
