--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -12,7 +12,7 @@ $custom-primary-palette: (
     200 : #9cf9dd,
     300 : #74f7cf,
     400 : #57f5c5,
-    500 : #39f3bb,
+    500 : #79f4bc,
     600 : #33f1b5,
     700 : #2cefac,
     800 : #24eda4,
@@ -45,7 +45,7 @@ $custom-primary-dark-palette: (
     200 : #9cf9dd,
     300 : #333333,
     400 : #57f5c5,
-    500 : #39f3bb,
+    500 : #79f4bc,
     600 : #33f1b5,
     700 : #333333,
     800 : #24eda4,
