--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<header></header>
-<router-outlet></router-outlet>
-<footer></footer>
+<div class="ultimate-container" fullscreen>
+    <div class="page-container">
+        <header></header>
+        <main class="content">
+            <router-outlet></router-outlet>
+        </main>
+        <footer></footer>
+    </div>
+</div>
