--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,12 +1,14 @@
+:host {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    padding: 30px;
-    transform: translate(-50%, -50%);
     font-size: 30px;
     text-align: center;
     display: flex;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
 
