Full screen behavior improvements.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="ultimate-container" fullscreen>
+<div class="ultimate-container">
     <div class="page-container">
         <header></header>
-        <main class="content">
+        <div class="content">
             <router-outlet></router-outlet>
-        </main>
+        </div>
         <footer></footer>
     </div>
 </div>
