--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,11 @@
 .footer {
-
     width: 100%;
     left: auto;
     right: auto;
     text-align: center;
     font-size: 0.6em;
-    padding: 3px;
+    margin-top: 10px;
+    margin-bottom: 7px;
 
     span {
         cursor: pointer;
