--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,7 @@
-.page-container {
-}
-
 // Page layout //
 .ultimate-container {
-    min-height: calc(100vh - 16px);;
-  }
+    // min-height: calc(100vh - 16px);
+}
   
 .page-container {
     display: flex;
@@ -16,7 +13,7 @@
     flex: 1;
 }
 
-main {
+.content {
     display: flex;
     flex-direction: column;
     > *:not(router-outlet) {
