--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,6 @@ $light-bg-image: linear-gradient(-225deg,#dfffcd 0,#90f9c4 48%,#79f4bc 100%);
 $dark-bg-image: linear-gradient(to right, #434343 0%, black 100%);
 
 html {
-  //height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-image: $light-bg-image;
@@ -50,7 +49,7 @@ body {
   overscroll-behavior-y: none;
 }
 
-// html, body { min-height: 100%; }
+html, body { min-height: 100%; }
 
 h1, h2, h3, h4, label {
     font-family: 'Product Sans Bold';
@@ -100,7 +99,7 @@ h1, h2, h3, h4, label {
 .disclaimer {
   text-align: center;
   padding-top: 15px;
-  font-size: 0.8em;
+  font-size: 0.7em;
   opacity: 0.7;
 }
 
