Add Google analytics. Further improvements in the fullscreen experience. Fix landing page positioning. Fix positioning on desktop screens.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
-<div class="ultimate-container">
-    <div class="page-container">
-        <header></header>
-        <div class="content">
-            <router-outlet></router-outlet>
-        </div>
-        <footer></footer>
-    </div>
+<div class="page-container">
+    <header></header>
+    <main class="content">
+        <router-outlet></router-outlet>
+    </main>
+    <footer></footer>
 </div>
