--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,3 @@
-// Page layout //
-.ultimate-container {
-    // min-height: calc(100vh - 16px);
-}
-  
 .page-container {
     display: flex;
     flex-direction: column;
@@ -19,5 +14,18 @@
     > *:not(router-outlet) {
         flex: 1;
         display: block;
+    }
+}
+
+$max-width: 556px;
+
+:host {
+    @media screen and (min-width: $max-width) {
+        .page-container {
+            width: calc(556px - 16px);
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, 0);
+        }
     }
 }
