--- a/src/app/poll-management/poll-management.component.scss
+++ b/src/app/poll-management/poll-management.component.scss
@@ -1,6 +1,7 @@
 .poll {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 10px;
     padding: 10px 16px;
 
