--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,8 +140,20 @@ h1, h2, h3, h4, label {
   }
 }
 
-@media only screen and (max-width: 500px) {
-  .container {
-    width: 70%;
-  }
+$max-width: 556px;
+
+:host {
+    @media screen and (min-width: $max-width) {
+        .page-container {
+            width: calc(556px - 16px);
+            position: absolute;
+            left: 50%;
+            transform: translate(-50%, 0);
+        }
+
+        .spinner-bg {
+          right: 50%;
+          transform: translate(50%,0);
+        }
+    }
 }
