Create the movie poll functionality. Add voter component to show the count and to ease the vote. Enables adding of the vote options if it's been enabled in the poll settings.

--- a/src/app/add-poll/add-poll.component.scss
+++ b/src/app/add-poll/add-poll.component.scss
@@ -22,3 +22,25 @@ mat-form-field.full-width {
         width: calc(100% - 60px);
     }
 }
+
+.settings-icon {
+    float: right;
+}
+
+.settings {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    cursor: pointer;
+
+    & > mat-slide-toggle {
+        margin-right: 2px;
+    }
+}
+
+.poll-buttons-container {
+    padding-top: 30px;
+    display: flex;
+    justify-content: space-between;
+}
