--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -1,3 +1,13 @@
+.poll-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > div {
+        width: 100%;
+    }
+}
+
 .poll-header {
     display: flex;
     justify-content: space-between;
@@ -45,7 +55,7 @@
         height: 100%;
         width: 0%;
         background-color: #abf8c8;
-        // opacity: 0.5;
+        opacity: 0.3;
         transition: all 2s ease !important;
         z-index: 1;
     }
@@ -59,4 +69,15 @@
         box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
         border-radius: 50%;
     }
+}
+
+.add-new-item-btn {
+    margin: 20px;
+    font-size: 40px;
+    height: 40px;
+    width: 40px;
+}
+
+.add-new-item-container {
+    margin-top: 30px;
 }
