Adds about page. Allow random draw from poll for the poll owner. Add poll options visible in the management page for an easy overview.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,6 +13,10 @@
       </button>
       <mat-divider></mat-divider>
     </ng-container>
+    <button mat-menu-item (click)="about()" aria-label="About">
+      <mat-icon>info_outline</mat-icon>
+      <span>About</span>
+    </button>
     <ng-container *ngIf="user$ | async as user; else showLogin">
         <button mat-menu-item (click)="manage()" aria-label="Manage polls">
           <mat-icon>favorite_border</mat-icon>
