--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -30,9 +30,9 @@
           </span>
         </div>
       </div>
-      <div class="show-more" *ngIf="shortened" (click)="shortened = !shortened">Show more info</div>
+      <div class="show-more" (click)="shortened = !shortened">{{ shortened ? 'Show more info' : 'Show less' }}</div>
     </div>
-    <div class="controls">
+    <div class="controls" *ngIf="removable || voteable">
       <mat-icon *ngIf="removable" class="close" (click)="remove(pollItem)" style="cursor: pointer;">close</mat-icon>
       <voter *ngIf="voteable" [pollItem]="pollItem" [hasVoted]="hasVoted" (onClick)="clicked(pollItem)"></voter>
     </div>
