--- a/src/app/poll-management/poll-management.component.html
+++ b/src/app/poll-management/poll-management.component.html
@@ -5,11 +5,22 @@
   <ng-container *ngIf="user$ | async; else showLogin">
     <ng-container *ngIf="polls$ | async as polls; else spinner">
       <mat-card class="poll" *ngFor="let poll of polls">
-        <h2>{{ poll.name }}</h2>
-        <div class="controls">
-          <mat-icon title="Open" (click)="navigateToPoll(poll)">link</mat-icon>
-          <mat-icon class="share-icon" title="Click to share!" (click)="shareClicked(poll)">share</mat-icon>
-          <mat-icon title="Click to remove" (click)="removeClicked(poll)">close</mat-icon>
+        <div>
+          <h2>{{ poll.name }}</h2>
+          <div class="controls">
+            <mat-icon title="Open" (click)="navigateToPoll(poll)">link</mat-icon>
+            <mat-icon class="share-icon" title="Click to share!" (click)="shareClicked(poll)">share</mat-icon>
+            <mat-icon title="Click to remove" (click)="removeClicked(poll)">close</mat-icon>
+          </div>
+        </div>
+        <div class="poll-options">
+          <div class="poll-option" *ngFor="let pollItem of poll.pollItems; let i = index;">
+            <span>{{ pollItem.name }}</span>
+            <div class="voters">
+              <span class="count">{{ pollItem.voters.length }}</span>
+              <mat-icon [matTooltip]="getVotersString(pollItem)">people_outline</mat-icon>
+            </div>
+          </div>
         </div>
       </mat-card>
     </ng-container>
