--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -7,6 +7,7 @@
     <mat-slide-toggle [(ngModel)]="poll.moviepoll" (change)="changeMoviePollState($event)" matTooltip="Create a poll of movies">Movie poll</mat-slide-toggle>
     <mat-slide-toggle [(ngModel)]="poll.selectMany" matTooltip="Allow users to vote for multiple choices">Select many</mat-slide-toggle>
     <mat-slide-toggle [(ngModel)]="poll.allowAdd" matTooltip="Allow users to add their preferred options to the poll">Allow adding of options</mat-slide-toggle>
+    <!-- <mat-slide-toggle [(ngModel)]="poll.allowRandomDraw" matTooltip="Allow drawing a random option">Allow random option draw</mat-slide-toggle> -->
   </div>
   <mat-form-field class="full-width" style="margin-top: 17px;">
     <input matInput placeholder="Name of the poll" [(ngModel)]="poll.name">
@@ -15,7 +16,7 @@
     <input type="text" matInput placeholder="🎬 Search for movie" aria-label="Movie" [formControl]="movieControl" [matAutocomplete]="auto">
     <mat-hint align="start"><strong>Click the found movie to add it to the poll</strong> </mat-hint>
     <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-      <mat-option *ngFor="let movie of searchResults$ | async" [value]="option" (click)="addMoviePollItem(movie.id)">
+      <mat-option *ngFor="let movie of searchResults$ | async" [value]="option" (click)="addMoviePollItem(movie)">
         {{ movie.original_title }} ({{ movie.release_date | date: 'yyyy' }})
       </mat-option>
     </mat-autocomplete>
