--- a/src/app/poll-management/poll-management.component.scss
+++ b/src/app/poll-management/poll-management.component.scss
@@ -1,12 +1,17 @@
 .poll {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+    flex-direction: column;
     padding: 10px 16px;
+    margin-bottom: 10px;
+
+    & > div:first-child {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
     h2 {
-        margin-bottom: 0;
+        margin: 0;
     }
 
     .controls {
@@ -21,6 +26,41 @@
 
         & > * {
             padding: 10px;
+
+            &:last-of-type {
+                padding-right: 0;
+            }
+        }
+    }
+
+    .poll-options {
+        width: 100%;
+        font-size: 0.9em;
+        padding-left: 1px;
+        padding-right: 10px;
+
+        .poll-option {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .voters {
+                display: flex;
+                align-items: center;
+
+                .count {
+                    padding: 3px;
+                }
+
+                .material-icons {
+                    font-size: 20px;
+                    line-height: 23px;
+                }
+            }
+
+            &:not(:last-child) {
+                border-bottom: 1px solid #ccc;
+            }
         }
     }
 }
