--- a/src/app/voter/voter.component.scss
+++ b/src/app/voter/voter.component.scss
@@ -23,6 +23,7 @@ $width: 40px;
         text-align: center;
         height: $half-height;
         line-height: $half-height;
+        color: black;
     }
 
     .button-container {
